--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 # Project-wide Gradle settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+
+# Use Android Studio bundled JDK
+org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
 org.gradle.parallel=true
 org.gradle.caching=true
 
